# pptx-renderer-rust

./: .gitignore  Cargo.toml
src/: legacy_shape_tests.rs  lib.rs  model.rs  parser.rs  renderer.rs  shapes_presets.rs  table_styles.rs  xml.rs
tests/: debug_ast.rs  debug_bg.rs  debug_pic_node.rs  parity_test.rs  render_parity_test.rs  render_png_test.rs  template.pptx  test_img.rs  update_ast.rs
tests/harness/: actual_on_target_slide_0.html  actual_on_target_slide_1.html  actual_on_target_slide_2.html  actual_on_target_slide_3.html  dump_ast.ts  dump_html.ts  expected_ast.json  expected_ast_template.json  expected_html_on_target.json  expected_html_template.json  generate_baseline.ts  package-lock.json  package.json  visual_diff.ts
