[package]
name = "pptx-renderer-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
openxml-opc = { path = "../Open-XML-SDK-Rust/openxml-opc", version = "0.1.0" }
openxml = { path = "../Open-XML-SDK-Rust/openxml", version = "0.1.0" }
quick-xml = "0.36"
hyper-render = { path = "../hyper-render", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
parley = "0.6"
base64 = "0.22.1"
