[package]
name = "pptx-renderer-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
openxml-opc = { git = "ssh://git@github.com/DangerousMindsAi/Open-XML-SDK-Rust.git" }
openxml = { git = "ssh://git@github.com/DangerousMindsAi/Open-XML-SDK-Rust.git" }
quick-xml = "0.36"
hyper-render = { git = "https://github.com/AGanguli/hyper-render.git", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
parley = "0.6"
base64 = "0.22.1"

